# sdk-porting-guide

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
myproject/: CMakeLists.txt  http_template.c  main.c
